--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 h1{
 color:red;
-font-family:'Fira Sans', sans-serif;
+font-family:'Roboto', sans-serif;
 }
 
 p{
 color:blue;
-font-family:'PT Serif', sans-serif;
+font-family:'Roboto', sans-serif;
 }
 
 button{
 color:black;
-font-family:'Inter', sans-serif;
+font-family:'Roboto', sans-serif;
 }
