--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
+
 .logo{
 color:red;
 font-family:'Roboto', sans-serif;
+padding: 40px 0;
+}
+
+.menu{
+  display: flex;
+  align-items: center;
+}
+
+.logo, .menu{
+  display: inline-block;
 }
 
 .main-content__title{
@@ -16,4 +27,22 @@ font-family:'Roboto', sans-serif;
 .main-content__button{
 color:grey;
 font-family:'Roboto', sans-serif;
+}
+
+.wrapper{
+  margin: auto;
+  width: 80%;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu__item{
+  padding: 0 13px;
+}
+
+.menu__item: last-child{
+  padding-right: 0;
 }
