--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ color:black;
 padding: 40px 0;
 padding-left: 44px;
 display: inline-bl;
-font: bold 24px/31px ptserif, arial, helvetica, sans-serif;
+font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
 width: 190px;
 height: 35px;
 }
