--- a/style.css
+++ b/style.css
@@ -12,23 +12,21 @@
   padding: 0 13px;
 }
 
-.menu__item: last-child{
+.menu__item:last-child{
   padding-right: 0;
 }
-
 
 .logo{
 position: relative;
 color:black;
 padding: 40px 0;
 padding-left: 44px;
-display: inline-bl;
 font: bold 24px/31px pt_serifmedium, arial, helvetica, sans-serif;
 width: 190px;
 height: 35px;
 }
 
-.logo_circle{
+.logo__circle{
   position: absolute;
   left: 0;
   top: 50%;
@@ -39,11 +37,11 @@ height: 35px;
   opacity: .7;
 }
 
-.logo_circle_color_dark-blue{
+.logo__circle_color_dark-blue{
   background: #0056EC;
 }
 
-.logo_circle_color_blue{
+.logo__circle_color_blue{
   left: 8px;
   top: 56%;
   background: #C8DBFB;
