--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ position: relative;
 color:black;
 padding: 40px 0;
 padding-left: 44px;
-font: bold 24px/31px pt_serif700, arial, helvetica, sans-serif;
+font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
 width: 190px;
 height: 35px;
 }
