--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ height: 35px;
 
 .menu__item{
   padding: 0 13px;
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  color #000000;
 }
 
 .menu__item:last-child{
