--- a/style.css
+++ b/style.css
@@ -9,12 +9,15 @@
 }
 
 .menu__item{
-  padding: 0 13px;
   position: relative;
+  margin-right: 26px:
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  color: #000;
+  text-decoration: none:
 }
 
 .menu__item: last-child{
-  padding-right: 0;
+  margin-right: 0;
 }
 
 .menu__item_active:: after{
