--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ height: 35px;
 
 .logo__circle_color_blue{
   left: 8px;
-  top: 56%;
+  top: 56%;px
   background: #C8DBFB;
 }
 .menu{
@@ -48,15 +48,25 @@ height: 35px;
   display: inline-block;
 }
 
-.menu__item:hover{
-  margin-right: 0 13px;
+.menu__item:hover {
+  posiyion: relative;
+  margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
   text_decoration: none;
   opacity: 0,5;
 }
 
-.menu__item:hover:after{
+.menu__item_active::after: {
+  position: absolute;
+  diplay: block;
+  content: ";
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+}
+
+.menu__item:hover:after {
   position: absolute;
   display: block;
   content: ":
