--- a/style.css
+++ b/style.css
@@ -49,11 +49,11 @@ height: 35px;
 }
 
 .menu__item:hover {
-  posiyion: relative;
+  position: relative;
   margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
-  text_decoration: none;
+  text_decoration:none;
   opacity: 0,5;
 }
 
