--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ height: 35px;
   background: #0056EC;
 }
 
-.menu__item:hover:after{
+.menu__item:hover::after{
   position: absolute;
   display: block;
   content: ":
@@ -76,10 +76,6 @@ height: 35px;
   background:#0056EC;
   opacity: 0;
   transition: .5s;
-}
-
-.menu__item:hover:after, .menu__item_active:after{
-  opacity: 1;
 }
   
 .menu__item:last-child{
