--- a/style.css
+++ b/style.css
@@ -55,12 +55,11 @@ height: 35px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
   text-decoration: none;
-  opacity: 0,5;
 }
 
 .menu__item_active::after {
   position: absolute;
-  diplay: block;
+  display: block;
   content: ";
   width: 100%;
   height: 10px;
