--- a/style.css
+++ b/style.css
@@ -57,10 +57,18 @@ height: 35px;
   text-decoration: none;
 }
 
+.menu__item::after {
+  position: relative;
+  margin-right: 26px;
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  color: #000;
+  text-decoration: none;
+}
+
 .menu__item_active::after {
   position: absolute;
   display: block;
-  content: ";
+  content: "";
   width: 100%;
   height: 10px;
   background: #0056EC;
