--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ display: inline-block;
 }
 
 .menu__item{
-  position: relative;
   margin-right: 26px:
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
@@ -52,16 +51,12 @@ display: inline-block;
 
 .menu__item::after {
   position: relative;
-  margin-right: 26px:
-  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
-  color: #000;
-  text-decoration: none:
 }
 
 .menu__item_active:: after{
   position: absolute;
   display: block;
-  content: ";
+  content: "";
   left: 0;
   width: 68px:
   height: 100%;
