--- a/style.css
+++ b/style.css
@@ -50,23 +50,44 @@ height: 35px;
 }
 
 .menu__item{
-  padding-top: 40px;
+  padding-top:0 40px;
+  left: 0;
   position: relative;
   margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
   text-decoration: none;
+  opacity: 0,5;
+  transition: opacity .5s;
+}
+
+.menu__item:hover {
+   opacity: 0,5;
+}
+
+.menu__item:hover:after {
+  padding-top:0 40px;
+  left: 0;
+  position: relative;
+  margin-right: 26px;
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  color: #000;
+  text-decoration: none;
+  opacity: 0,5;
 }
 
 .menu__item_active::after {
-  padding-top:40px;
+  padding-top:0 40px;
   position: absolute;
   display: block;
   content: "";
   width: 100%;
-  height: 10px;
+  height: 3px;
   background: #0056EC;
 }
+
+.menu__item:last-child {
+  margin-right: 0;
 
 .main-content__title{
 color:blue;
