--- a/style.css
+++ b/style.css
@@ -66,8 +66,6 @@ height: 35px;
 }
 
 .menu__item:hover:after {
-  padding-top:0 40px;
-  left: 0;
   position: relative;
   margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
@@ -77,12 +75,12 @@ height: 35px;
 }
 
 .menu__item_active::after {
-  padding-top:0 40px;
-  position: relative;
+  position: absolute;
   display: block;
   content: "";
-  width: 50%;
+  width: 100%;
   height: 3px;
+  left: 0;
   background: #0056EC;
   opacity: 1;
 }
