--- a/style.css
+++ b/style.css
@@ -47,10 +47,10 @@ height: 35px;
   display: flex;
   align-items: center;
   display: inline-block;
+  margin-top: 100px;
 }
 
 .menu__item{
-  padding-top:0 40px;
   left: 0;
   position: relative;
   margin-right: 26px;
