--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ height: 35px;
   display: flex;
   align-items: center;
   display: inline-block;
-  margin-top: 100px;
+ padding-top: 100px;
 }
 
 .menu__item{
