--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+  margin: 0;
+}
+
 .wrapper{
   margin: auto;
   width: 80%;
@@ -9,10 +13,13 @@
 }
 
 .logo{
-color:red;
-font-family:sans-serif;
+position: relative;
+color:black;
 padding: 40px 0;
-display: inline-block;
+padding-left: 44px;
+font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
+width: 190px;
+height: 35px;
 }
 
 .logo__circle{
@@ -39,35 +46,45 @@ display: inline-block;
 .menu{
   display: flex;
   align-items: center;
-  display: inline-block;
-  padding-top: 100px;
 }
 
 .menu__item{
-  position: relative;
-  margin-right: 26px:
-  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
-  color: #000;
-  text-decoration: none;
-}
-
-.menu__item::after {
+  left: 0;
   position: relative;
   margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
   text-decoration: none;
+  opacity: 1;
+  transition: opacity .5s;
+}
+
+.menu__item:hover {
+   opacity: 1;
+}
+
+.menu__item:hover:after {
+  position: relative;
+  margin-right: 26px;
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  color: #000;
+  text-decoration: none;
+  opacity: 1;
 }
 
 .menu__item_active::after {
   position: absolute;
   display: block;
   content: "";
+  width: 100%;
+  height: 3px;
   left: 0;
-  width: 68px:
-  height: 100%;
-  bakground: #0056EC;
+  background: #0056EC;
+  opacity: 1;
 }
+
+.menu__item:last-child {
+  margin-right: 0;
 
 .main-content__title{
 color:blue;
