--- a/style.css
+++ b/style.css
@@ -86,14 +86,21 @@ height: 35px;
 .menu__item:last-child {
   margin-right: 0;
 
+.main-content{
+  padding-top: 100px;
+  width: 37%;
+  }
+  
 .main-content__title{
+margin-bottom: 0 0 40px 0;
+font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
 color:blue;
-font-family:'Roboto', sans-serif;
 }
 
 .main-content__subtitle{
-color:blue;
-font-family:'Roboto', sans-serif;
+margin-botom: 41px;
+font: 18px/21px Roboto, arial, helvetica, sans-serif;
+color:blue:
 }
 
 .main-content__button{
