--- a/style.css
+++ b/style.css
@@ -87,8 +87,7 @@ height: 35px;
   margin-right: 0;
 
 .main__title{
-padding-top: 100px;
-width: 37%;
+padding-right: 63%;
 margin-bottom: 0 0 40px 0;
 font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
 color:blue;
