--- a/style.css
+++ b/style.css
@@ -109,6 +109,15 @@ height: 35px;
 }
 
 .main__button{
-  color:grey;
-  font-family:'Roboto', sans-serif;
-}
+  display: inline-block;
+  font: 14px/16px Roboto, arial, helvetica, sans-serif;
+  color:#fff;
+  background: #0056EC;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 4px;
+  }
+  
+  .main__button:hover{
+    opacity: .5;
+  }
