--- a/style.css
+++ b/style.css
@@ -14,13 +14,15 @@ body{
 }
 
 .logo{
-position: relative;
-color:black;
-padding: 40px 0;
-padding-left: 44px;
-font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
-width: 190px;
-height: 35px;
+  position: relative;
+  color:black;
+  padding: 40px 0;
+  padding-left: 44px;
+  font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
+  width: 146px;
+  height: 32px;
+  top: 40px;
+  left: calc(50% - 146px/2 - 647px);;
 }
 
 .logo__circle{
@@ -95,8 +97,12 @@ height: 35px;
   
 .main__title{
   margin: 0 0 40px 0;
-  font: bold 50px/65px pt_serifbold, arial, helvetica, sans-serif;
-  color:blue;
+  font: bold 66px/87,45px pt_serifbold, arial, helvetica, sans-serif;
+  color:black;
+  width: 567px;
+  height: 255px;
+  top: 318px;
+  left: calc(50% - 567px/2 - 481.5px);
 }
   
 .main__title-text_highlight{
@@ -105,8 +111,12 @@ height: 35px;
 
 .main__subtitle{
   margin-botom: 41px;
-  font: 18px/21px Roboto, arial, helvetica, sans-serif;
-  color:blue:
+  font: 22px/26px Roboto, arial, helvetica, sans-serif;
+  color:black:
+  width: 455px;
+  height: 52x;
+  top: 613px;
+  left: calc(50% - 455px/2 - 537.5px);
 }
 
 .main__button{
