--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ height: 35px;
  .main{
   padding: 0 63% 100px 0;
   background: top right no-repeat url(img/mainimg.svg);
-  height: 379px;
+  height: 100vh;
   }
 
 .main__title{
