--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 position: relative;
 color:black;
 padding: 40px 0;
-padding-left: 44px;
+padding-left: 195px;
 font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
 width: 190px;
 height: 35px;
@@ -92,7 +92,7 @@ height: 35px;
   padding: 0 63% 100px 0;
   background: top right no-repeat url(img/mainimg.svg);
   height: 100vh;
-  }
+  padding-left: 195px}
 
 .main__title{
   margin: 0 0 40px 0;
