--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body{
 position: relative;
 color:black;
 padding: 85px 0;
-padding-left: 210px;
-font: bold 40px/50px pt_serifbold, arial, helvetica, sans-serif;
+padding-left: 2px;
+font: bold 50/60px pt_serifbold, arial, helvetica, sans-serif;
 width: 190px;
 height: 35px;
 }
@@ -36,13 +36,13 @@ height: 35px;
 
 .logo__circle_color_dark-blue{
   background: #0056EC;
-  left: 195px;
+  left: 205px;
 }
 
 .logo__circle_color_blue{
   left: 8px;
   top: 56%;
-  left: 205px;
+  left: 215px;
   background: #C8DBFB;
 }
 
@@ -52,7 +52,7 @@ height: 35px;
 }
 
 .menu__item{
-  left: 0;
+  left: 195px;
   position: relative;
   margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
@@ -91,7 +91,7 @@ height: 35px;
   }
 
  .main{
-  padding: 0 63% 100px 0;
+  padding: 1000px 63% 100px 0;
   background: top right no-repeat url(img/mainimg.svg);
   height: 100vh;
   padding-left: 195px}
