--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ height: 35px;
 .menu{
   display: flex;
   align-items: center;
-   right: 200px;
+  right: 200px;
 }
 
 .menu__item{
@@ -91,7 +91,7 @@ height: 35px;
   }
 
  .main{
-  padding: 350px 63% 100px 0;
+  padding: 0 63% 100px 200px;
   background: top right no-repeat url(img/mainimg.svg);
   height: 100vh;
   padding-left: 195px}
