--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 position: relative;
 color:black;
 padding: 40px 0;
-padding-left: 44px;
+padding-left: 46px;
 font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
 width: 190px;
 height: 35px;
@@ -89,14 +89,14 @@ height: 35px;
   }
 
  .main{
-  padding: 0 63% 100px 0;
+  padding: 100px 63% 100px 0;
   background: top right no-repeat url(img/mainimg.svg);
   }
 
 .main__title{
   margin: 0 0 40px 0;
   font: bold 50px/65px pt_serifbold, arial, helvetica, sans-serif;
-  color:blue;
+  color:black;
 }
 
 .main__title-text_highlight{
