--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ height: 35px;
 
 .logo__circle{
   position: absolute;
-  left: 0;
+  left: 55px;
   top: 50%;
   transform: translateY(-50%);
   width: 28px;
@@ -89,7 +89,7 @@ height: 35px;
   }
 
  .main{
-  padding: 105px 63% 100px 0;
+  padding: 105px 65% 100px 0;
   background: top right no-repeat url(img/mainimg.svg);
   }
 
