--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ height: 35px;
   }
 
 .main__title{
-  margin: 0 0 40px 0;
+  margin: 0 5px 40px 0;
   font: bold 60px/75px pt_serifbold, arial, helvetica, sans-serif;
   color:black;
 }
