--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ height: 35px;
 }
 
 .menu__item{
-  left: 0;
+  right: 40px;
   position: relative;
   margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
