--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ height: 35px;
   }
 
 .main__subtitle{
-  margin-botom: 70px;
+  margin-bottom: 145px;
   font: 22px/25px Roboto, arial, helvetica, sans-serif;
   color:blue:
 }
