--- a/style.css
+++ b/style.css
@@ -107,10 +107,10 @@ height: 35px;
 
 .main__button{
   display: inline-block;
-  font: 17px/20px Roboto, arial, helvetica, sans-serif;
+  font: 18px/21px Roboto, arial, helvetica, sans-serif;
   color:#fff;
   background: #0056EC;
-  padding: 18px 36px;
+  padding: 20px 34px 17px 23px;
   text-decoration: none;
   border-radius: 4px;
   }
