--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ height: 35px;
 
   .points{
     position: absolute;
-    font: 8px/8px;
+    font: 8px/10px pt_serifbold, arial, helvetica, sans-serif;
     padding: 1032px 0px 0px 968;
     color: #C8DBFB;
    }
