--- a/style.css
+++ b/style.css
@@ -126,7 +126,28 @@ height: 35px;
     color: #C8DBFB;
    }
   
+  @madia (max-width: 768px){
   .menu{
    display: none;
+    }
+    
+   .header { 
+   margin-bottom: 28px;
+    }
+    
+   .main{
+    padding: 74% 0 0;
+    background-siza: 74%;
+    background-position: top center;
+     }
+    
+    .main__title{
+    margin-bottom: 44px;
+    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+     }
+    
+    .main__button{
+    font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+    }
    }
    
