--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ height: 35px;
     }
     
    .main{
+    text-align: center;
     padding: 74% 0 0;
     background-siza: 74%;
     background-position: top center;
