--- a/style.css
+++ b/style.css
@@ -151,4 +151,56 @@ height: 35px;
     font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
     }
    }
+
+
+@media (max-width: 768px){
+  .menu{
+   display: none;
+    }
+    
+   .header { 
+   margin-bottom: 28px;
+    }
+    
+   .main{
+    text-align: center;
+    padding: 74% 0 0;
+    background-size: 74%;
+    background-position: top center;
+     }
+    
+    .main__title{
+    margin-bottom: 44px;
+    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+     }
+    
+    .main__button{
+    font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+    }
+   }
    
+@media (max-width: 375px){
+  .menu{
+   display: none;
+    }
+    
+   .header { 
+   margin-bottom: 28px;
+    }
+    
+   .main{
+    text-align: center;
+    padding: 74% 0 0;
+    background-size: 74%;
+    background-position: top center;
+     }
+    
+    .main__title{
+    margin-bottom: 44px;
+    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+     }
+    
+    .main__button{
+    font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+    }
+   }
