--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+  margin: 0;
+}
+
 .wrapper{
   margin: auto;
   width: 80%;
@@ -6,19 +10,23 @@
 .header{
   display: flex;
   justify-content: space-between;
+  margin-bottom: 127px;
 }
 
 .logo{
-color:red;
-font-family:sans-serif;
+position: relative;
+color:black;
 padding: 40px 0;
-display: inline-block;
+padding-left: 48px;
+font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
+width: 190px;
+height: 35px;
 }
 
 .logo__circle{
   position: absolute;
-  left: 0;
-  top: 50%;
+  left: 4px;
+  top: 47%;
   transform: translateY(-50%);
   width: 28px;
   height: 28px;
@@ -31,55 +39,173 @@ display: inline-block;
 }
 
 .logo__circle_color_blue{
-  left: 8px;
-  top: 56%;
+  left: 11px;
+  top: 53%;
   background: #C8DBFB;
 }
 
 .menu{
   display: flex;
   align-items: center;
-  display: inline-block;
-  padding-top: 100px;
 }
 
 .menu__item{
-  position: relative;
-  margin-right: 26px:
-  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
-  color: #000;
-  text-decoration: none;
-}
-
-.menu__item::after {
+  right: 20px;
   position: relative;
   margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
   text-decoration: none;
+  opacity: 1;
+  transition: opacity .5s;
 }
 
-.menu__item_active::after {
+.menu__item:hover {
+   opacity: 0,5;
+}
+
+.menu__item::after {
   position: absolute;
   display: block;
   content: "";
+  width: 100%;
+  height: 3px;
   left: 0;
-  width: 68px:
-  height: 100%;
-  bakground: #0056EC;
+  background: #0056EC;
+  opacity: 0;
 }
 
-.main-content__title{
-color:blue;
-font-family:'Roboto', sans-serif;
+.menu__item:hover, .menu__item::after {
+  opacity: 1
 }
 
-.main-content__subtitle{
-color:blue;
-font-family:'Roboto', sans-serif;
+.menu__item:last-child {
+  margin-right: -9px;
+  }
+
+ .main{
+  padding: 80px 61% 120px 0;
+  background: top right no-repeat url(img/mainimg.svg);
+  }
+
+.main__title{
+  margin: 0 5px 31px 0;
+  font: bold 66px/83px pt_serifbold, arial, helvetica, sans-serif;
+  color:black;
 }
 
-.main-content__button{
-color:grey;
-font-family:'Roboto', sans-serif;
+.main__title-text_highlight{
+  line-height: 88px;
+  background: #ECF3FF;
+  }
+
+.main__subtitle{
+  margin-bottom: 40px;
+  font: 22px/25px Roboto, arial, helvetica, sans-serif;
+  color:blue:
 }
+
+.main__button{
+  display: inline-block;
+  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+  color:#fff;
+  background: #0056EC;
+  padding: 20px 34px 17px 23px;
+  text-decoration: none;
+  border-radius: 4px;
+  }
+
+  .main__button:hover{
+    opacity: .5;
+  }
+
+  .points{
+    position: absolute;
+    font: 40px/45px pt_serifbold, arial, helvetica, sans-serif;
+    padding: 80px 0px 0px 39%;
+    color: #C8DBFB;
+   }
+  
+  @media (max-width: 768px){
+  .menu{
+   display: none;
+    }
+    
+   .header { 
+   margin-bottom: 28px;
+    }
+    
+   .main{
+    text-align: center;
+    padding: 74% 0 0;
+    background-siza: 74%;
+    background-position: top center;
+     }
+    
+    .main__title{
+    margin-bottom: 44px;
+    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+     }
+    
+    .main__button{
+    font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+    }
+   }
+
+
+@media (max-width: 768px){
+  .menu{
+   display: none;
+    }
+    
+   .header { 
+   margin-bottom: 28px;
+    }
+    
+   .main{
+    text-align: center;
+    padding: 74% 0 0;
+    background-size: 74%;
+    background-position: top center;
+     }
+    
+    .main__title{
+    margin-bottom: 44px;
+    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+     }
+    
+    .main__button{
+    font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+    }
+   }
+   
+@media (max-width: 375px){
+  .menu{
+   display: none;
+    }
+    
+   .header { 
+   margin-bottom: 28px;
+    }
+    
+   .main{
+    text-align: center;
+    padding: 74% 0 0;
+    background-size: 74%;
+    background-position: top center;
+     }
+    
+    .main__title{
+    margin-bottom: 44px;
+    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+     }
+    
+    .main__img{
+    width: 90%;
+    height: auto;
+     }
+  
+    .main__button{
+    font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+    }
+   }
