--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ height: 35px;
     
     .main__title{
     margin-bottom: 44px;
-    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+    font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
      }
     
     .main__img{
