--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ height: 35px;
     
     .main__title{
     margin-bottom: 5px;
-    margin: 0 -5px 0 0;
+    margin: 0 -5px 30px 0;
     font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
      }
   
@@ -178,6 +178,9 @@ height: 35px;
     line-height: 5px;
      }
   
+  .main__subtitle{
+    font: 15px/25px Roboto, arial, helvetica, sans-serif;
+    }
     .main__button{
     font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
     }
