--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ height: 35px;
     
     .main__title{
     margin-bottom: 5px;
-    margin: 0 -5px 30px 0;
+    margin: 0 -5px 35px 0;
     font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
      }
   
@@ -178,8 +178,18 @@ height: 35px;
     line-height: 5px;
      }
   
-  .main__subtitle{
-    font: 15px/25px Roboto, arial, helvetica, sans-serif;
+    .main__subtitle1{
+    font: 15px/15px Roboto, arial, helvetica, sans-serif;
+    margin: 0 10px 0 10px;
+    }
+  
+    .main__subtitle2{
+    font: 15px/15px Roboto, arial, helvetica, sans-serif;
+    margin: 0 10px 0 10px;
+    }
+  
+    .main__subtitle3{
+    font: 15px/15px Roboto, arial, helvetica, sans-serif;
     margin: 0 10px 0 10px;
     }
     .main__button{
