--- a/style.css
+++ b/style.css
@@ -178,20 +178,11 @@ height: 35px;
     line-height: 5px;
      }
   
-    .main__subtitle1{
+    .main__subtitle{
     font: 15px/15px Roboto, arial, helvetica, sans-serif;
     margin: 0 10px 0 10px;
     }
-  
-    .main__subtitle2{
-    font: 15px/15px Roboto, arial, helvetica, sans-serif;
-    margin: 0 10px 0 10px;
-    }
-  
-    .main__subtitle3{
-    font: 15px/15px Roboto, arial, helvetica, sans-serif;
-    margin: 0 10px 0 10px;
-    }
+ 
     .main__button{
     font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
     }
