--- a/style.css
+++ b/style.css
@@ -184,8 +184,7 @@ height: 35px;
     }
  
     .main__button{
-    font: 500 14px Roboto, arial, helvetica, sans-serif;
-    Line height: 16,41px;
-    padding: 20px 34px 17px 23px;
+    font: 500 14px/17px Roboto, arial, helvetica, sans-serif;
+    padding: 12px 19px 13px 20px;
     }
    }
