--- a/style.css
+++ b/style.css
@@ -153,10 +153,74 @@ height: 35px;
    }
 
 @media (max-width: 375px){
-  .menu{
-   display: none;
+   #menu__toggle{
+   opacity: 0;
     }
+  
+  .menu__btn{
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    left: 20px;
     
+    width: 26px;
+    height: 26px;
+    
+    cursor: pointer;
+    z-index: 1;
+    }
+  
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #616161;
+  }
+  
+  .menu__btn > span::before {
+  content: '';
+  top: -8px;
+  }
+  
+  .menu__btn > span::after {
+  content: '';
+  top: 8px;
+  }
+  
+  .menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #ECEFF1;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+  }
+  
+  .menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  }
+  
+  .menu__item:hover {
+  background-color: #CFD8DC;
+  }
+  
    .header { 
    margin-bottom: -28px;
     }
