--- a/style.css
+++ b/style.css
@@ -221,6 +221,25 @@ height: 35px;
   background-color: #CFD8DC;
   }
   
+  #menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+  }
+  
+  # menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+  }
+  
+  #menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+  }
+  
+  #menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
+   }
+  
    .header { 
    margin-bottom: -28px;
     }
