--- a/style.css
+++ b/style.css
@@ -153,6 +153,10 @@ height: 35px;
    }
 
 @media (max-width: 375px){
+   .logo{
+   display: none;
+   }
+  
    #menu__toggle{
    opacity: 0;
     }
