text-decoration: none у меню-бокс
-

--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ height: 35px;
   list-style: none;
   text-align: center;
   background-color: #ECEFF1;
+  text-decoration: none;
   }
   
   .menu__item {
