--- a/style.css
+++ b/style.css
@@ -125,9 +125,18 @@ height: 35px;
     padding: 80px 0px 0px 39%;
     color: #C8DBFB;
    }
+
+  @media (max-width: 1920px){
+   .menu__btn{
+   display: none;
+    }
   
   @media (max-width: 768px){
   .menu{
+   display: none;
+    }
+    
+  .menu__btn{
    display: none;
     }
     
