--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ height: 35px;
     
     .main__title{
     margin-bottom: 44px;
-    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+    font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
      }
     
     .main__button{
@@ -179,7 +179,7 @@ height: 35px;
     
     width: 26px;
     height: 29px;
-    color: blue;
+    color: #0056EC
     
     cursor: pointer;
     z-index: 1;
