--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ height: 35px;
     
     width: 26px;
     height: 29px;
-    color: #0056EC
+    color: #0056EC;
     
     cursor: pointer;
     z-index: 1;
