--- a/style.css
+++ b/style.css
@@ -131,6 +131,23 @@ height: 35px;
    display: none;
     }
   
+  @media (max-width: 1024px){
+  .hamburger-menu{
+   display: none;
+    }
+    
+   .header { 
+   margin-bottom: 28px;
+    }
+    
+   .main{
+    text-align: center;
+    padding: 74% 0 0;
+    background-size: 74%;
+    background-position: top center;
+     }  
+    
+    
   @media (max-width: 768px){
   .menu{
    display: none;
