--- a/style.css
+++ b/style.css
@@ -141,9 +141,9 @@ height: 35px;
     }
     
    .main{
-    text-align: center;
+    text-align: right;
     padding: 74% 0 0;
-    background-size: 74%;
+    background-size: 54%;
     background-position: top center;
      }  
     
