--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ height: 35px;
     background-size: 54%;
     background-position: top center;
      }  
-    
+    }
     
   @media (max-width: 768px){
   .menu{
