--- a/style.css
+++ b/style.css
@@ -131,6 +131,11 @@ height: 35px;
     }
     
   @media (max-width: 1024px){
+   .wrapper{
+   margin: auto;
+   wifth: 92%;
+    }
+    
    .header { 
    margin-bottom: 28px;
     }
@@ -141,45 +146,14 @@ height: 35px;
    background-size: 54%;
    background-position: top center;
      }
-    
-     .logo{
-   position: relative;
-   color:black;
-   padding: 40px 0;
-   padding-left: 48px;
-   font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
-   width: 190px;
-   height: 35px;
-    }
-
-   .logo__circle{
-   position: absolute;
-   left: 4px;
-   top: 47%;
-   transform: translateY(-50%);
-   width: 28px;
-   height: 28px;
-   border-radius: 50%;
-   opacity: .7;
-   }
-
-  .logo__circle_color_dark-blue{
-  background: #0056EC;
-   }
-
-   .logo__circle_color_blue{
-  left: 11px;
-  top: 53%;
-  background: #C8DBFB;
-   }
-
+   
    .menu{
   display: flex;
   align-items: center;
    }
 
   .menu__item{
-  right: 20px;
+  right: 79px;
   position: relative;
   margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
