--- a/style.css
+++ b/style.css
@@ -163,7 +163,14 @@ height: 35px;
   opacity: 1;
   transition: opacity .5s;
      }
-    }
+    
+   .main__title{
+   margin:20px auto;
+   padding:10px;
+   width:170px;
+   word-break:break-all;
+     }
+   }
     
   @media (max-width: 768px){
   .menu{
