--- a/style.css
+++ b/style.css
@@ -141,10 +141,18 @@ height: 35px;
     }
     
    .main{
-   text-align: right;
-   padding: 74% 0 0;
+   text-align: left;
+   padding: 7% 0 0;
    background-size: 54%;
    background-position: top center;
+     }
+    
+     .main__title{
+   margin:20px auto;
+   padding:7px 0 0 0;
+   font: bold 50px/50px pt_serifbold, arial, helvetica, sans-serif;
+   width:170px;
+   word-break:break-all;
      }
    
    .menu{
@@ -162,13 +170,6 @@ height: 35px;
   text-decoration: none;
   opacity: 1;
   transition: opacity .5s;
-     }
-    
-   .main__title{
-   margin:20px auto;
-   padding:10px;
-   width:170px;
-   word-break:break-all;
      }
    }
     
