--- a/style.css
+++ b/style.css
@@ -150,15 +150,19 @@ height: 35px;
      .main__title{
    margin:20px auto;
    padding:7px 0 0 0;
-   font: bold 50px/50px pt_serifbold, arial, helvetica, sans-serif;
+   font: bold 50px/59px pt_serifbold, arial, helvetica, sans-serif;
    width:170px;
    word-break:break-all;
      }
+    
+    .main__title-text_highlight{
+    line-height: 69px;
+     }  
    
    .menu{
-  display: flex;
-  align-items: center;
-   }
+    display: flex;
+    align-items: center;
+    }
 
   .menu__item{
   right: 18px;
