--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ height: 35px;
     
      .main__title{
    margin: 0px;
-   padding:7px 0 0 0;
+   padding:7px 0 10px 0;
    font: bold 50px/59px pt_serifbold, arial, helvetica, sans-serif;
    width:400px;
    word-break:break-all;
@@ -158,7 +158,15 @@ height: 35px;
     .main__title-text_highlight{
     line-height: 69px;
      }  
-   
+    
+    .main__subtitle{
+    margin-bottom: 40px;
+    font: 22px/25px Roboto, arial, helvetica, sans-serif;
+    color:blue:
+    width:350px;
+    word-break:break-all;
+    }
+    
    .menu{
     display: flex;
     align-items: center;
