--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ height: 35px;
     .main__subtitle{
     margin-bottom: 40px;
     font: 22px/25px Roboto, arial, helvetica, sans-serif;
-    color:blue:
+    color:blue;
     width:350px;
     word-break:break-all;
     }
