--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ height: 35px;
     
     .main__subtitle{
     margin-bottom: 40px;
+    margin: 60% 40% 20% 10%;
     font: 22px/25px Roboto, arial, helvetica, sans-serif;
     color:blue;
     width:350px;
