--- a/style.css
+++ b/style.css
@@ -161,12 +161,17 @@ height: 35px;
     
     .main__subtitle{
     margin-bottom: 40px;
-    margin: 60% 40% 20% 10%;
-    font: 22px/25px Roboto, arial, helvetica, sans-serif;
-    color:blue;
+    margin: 19px 1px 35px 1%;
+    font: 18px/27px Roboto, arial, helvetica, sans-serif;
+    color: black;
     width:350px;
-    word-break:break-all;
-    }
+    word-break:keep-all;
+     }
+    
+    .main__button{
+    font: 15px/18px Roboto, arial, helvetica, sans-serif;
+    padding: 15px 31px 9px 1px;
+      }
     
    .menu{
     display: flex;
