изменения в main в 1024 px
-

--- a/style.css
+++ b/style.css
@@ -142,9 +142,9 @@ height: 35px;
     
    .main{
    text-align: left;
-   padding: 7% 0 63px;
+   padding: 7% 0 110px;
    background-size: 54%;
-   background-position: 98%;
+   background-position: 430px;
      }
     
      .main__title{
