text-align; center - main__button - 1024px
-

--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ height: 35px;
     .main__button{
     font: 15px/18px Roboto, arial, helvetica, sans-serif;
     padding: 15px 31px 9px 1px;
+    text-align: center;
       }
     
    .menu{
