--- a/style.css
+++ b/style.css
@@ -215,7 +215,13 @@ height: 35px;
     .main__title{
     margin-bottom: 44px;
     font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
-     }
+    width:300px;
+    word-break:keep-all;
+    }
+    
+    .main__title-text_highlight{
+    line-height: 39px;
+     } 
     
     .main__button{
     font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
