--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ height: 35px;
     
    .main{
     text-align: center;
-    padding: 74% 0 150px;
+    padding: 74% 200px 150px;
     background-size: 74%;
     background-position: top center;
      }
