--- a/fonts.css
+++ b/fonts.css
@@ -1,31 +1,39 @@
 @font-face {
     font-family: 'pt_serifbold';
-    src: url('fonts/ptserif-bold-webfont.woff2') format('woff2'),
-         url('fonts/ptserif-bold-webfont.woff') format('woff');
+    src: url('ptserif-bold-webfont.woff2') format('woff2'),
+         url('ptserif-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'pt_serifbold_italic';
-    src: url('fonts/ptserif-bolditalic-webfont.woff2') format('woff2'),
-         url('fonts/ptserif-bolditalic-webfont.woff') format('woff');
+    src: url('ptserif-bolditalic-webfont.woff2') format('woff2'),
+         url('ptserif-bolditalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'pt_serifitalic';
-    src: url('fonts/ptserif-italic-webfont.woff2') format('woff2'),
-         url('fonts/ptserif-italic-webfont.woff') format('woff');
+    src: url('ptserif-italic-webfont.woff2') format('woff2'),
+         url('ptserif-italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'pt_serifregular';
-    src: url('fonts/ptserif-regular-webfont.woff2') format('woff2'),
-         url('fonts/ptserif-regular-webfont.woff') format('woff');
+    src: url('ptserif-regular-webfont.woff2') format('woff2'),
+         url('ptserif-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotoregular';
+    src: url('roboto-regular-webfont.woff2') format('woff2'),
+         url('roboto-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
