--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ height: 35px;
 
 .main__subtitle{
   margin-bottom: 40px;
-  font: 22x/26px Roboto, arial, helvetica, sans-serif;
+  font: 22px/26px Roboto, arial, helvetica, sans-serif;
   width: 440px;
 }
 
