--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ height: 35px;
   top: 73px;
   padding-top: 40px;
   padding-bottom: 1px;
-  padding-right: 83px;
+  padding-left: 83px;
   color: #000;
   font-family: 'Roboto', sans-serif;
   font-size: 30px;
