--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ height: 35px;
   display: block;
   position: absolute;
   width: 100%;
-  height: 2px;
+  height: 3px;
   background-color: blue;
   }
 
@@ -361,7 +361,7 @@ height: 35px;
   }
 
   .menu__btn > span::after {
-  content: '';
+  content: ''';
   top: 8px;
   }
 
@@ -491,4 +491,8 @@ height: 35px;
     font: 500 14px/17px Roboto, arial, helvetica, sans-serif;
     padding: 13px 23px 13px 20px;
     }
+
+    .points{
+     display: none;
+     }
    }
