--- a/style.css
+++ b/style.css
@@ -133,6 +133,12 @@ height: 35px;
      }
     }
 
+    @media (max-width: 1444px) {
+    .main {
+    background-size: 60%;
+     }
+    }
+
     @media (max-width: 1376px) {
     .wrapper {
     margin: auto;
@@ -217,6 +223,20 @@ height: 35px;
     transition: opacity .5s;
        }
      }
+
+  @media (max-width: 1328px){
+    .wrapper{
+    margin: auto;
+    width: 90%;
+     }
+  }
+
+  @media (max-width: 1036px){
+    .wrapper{
+    margin: auto;
+    width: 90%;
+     }
+  }
 
   @media (max-width: 1024px){
    .wrapper{
