--- a/style.css
+++ b/style.css
@@ -311,7 +311,26 @@ height: 35px;
       }
    }
 
+  @media (max-width: 1007px) {
+  .main{
+  background-size: 60%;
+  }
 
+  .main__title {
+  font: bold 35px/39px pt_serifbold, arial, helvetica, sans-serif;
+  width: 40%;
+   }
+
+  .main__title-text_highlight {
+  line-height: 39px;
+   }
+
+  .main__subtitle {
+  font: 18px/20px Roboto, arial, helvetica, sans-serif;
+  width: 40%;
+   }
+  }
+  
   @media (max-width: 768px){
   .menu{
    display: none;
