--- a/style.css
+++ b/style.css
@@ -134,9 +134,8 @@ height: 35px;
     }
 
     @media (max-width: 1444px) {
-    .main {
-    background-size: 60%;
-     }
+    .main{
+    background-size: 60%;}
     }
 
     @media (max-width: 1376px) {
