--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ height: 35px;
     @media (max-width: 1444px){
     .main {
     background-size: 60%;
+    background-position: 100%;
      }
     }
 
