--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ height: 35px;
 
  .main{
   padding: 80px 61% 150px 0;
-  background: top right 5px no-repeat url(img/mainimg.svg);
+  background: 99% top/50% no-repeat url(img/mainimg.svg);
   }
 
 .main__title{
@@ -112,7 +112,7 @@ height: 35px;
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
   color:#fff;
   background: #0056EC;
-  padding: 20px 34px 17px 23px;
+  padding: 20px 36px 17px 23px;
   text-decoration: none;
   border-radius: 4px;
   }
@@ -135,10 +135,7 @@ height: 35px;
 
     @media (max-width: 1460px) {
     .main {
-    padding: 80px 61% 150px 0;
-    background: top right 5px no-repeat url(img/mainimg.svg);
     background-size: 60%;
-    background-position: 100%;
      }
     }
 
@@ -257,7 +254,7 @@ height: 35px;
 
    .main{
    text-align: left;
-   padding: 7% 0 110px;
+   padding: 7% 0 115px;
    background-size: 54%;
    background-position: 423px;
      }
