--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ height: 35px;
 
     .main__subtitle{
     margin-bottom: 40px;
-    margin: 20px 0px 35px;
+    margin: 21px 0px 35px;
     font: 18px/26px Roboto, arial, helvetica, sans-serif;
     color: black;
     width:350px;
@@ -286,8 +286,8 @@ height: 35px;
      }
 
     .main__button{
-    font: 14px/16px Roboto, arial, helvetica, sans-serif;
-    padding: 12px 26px 12px 14px;
+    font: 14px/19px Roboto, arial, helvetica, sans-serif;
+    padding: 12px 27px 10px 13px;
     text-align: center;
       }
 
@@ -310,8 +310,8 @@ height: 35px;
 
   .points{
    position: absolute;
-   top: 653px;
-   padding: 0px 0px 0px 447px;
+   top: 651px;
+   padding: 0px 0px 0px 1px;
    color: #C8DBFB;
       }
    }
@@ -420,7 +420,7 @@ height: 35px;
   visibility: hidden;
   top: 0;
   left: -100%;
-  width: 300px;
+  width: 100%;
   height: 100%;
   margin: 0;
   padding: 80px 0;
@@ -435,7 +435,7 @@ height: 35px;
   top: 73px;
   padding-top: 40px;
   padding-bottom: 1px;
-  padding-left: 83px;
+  padding-left: 8px;
   color: #000;
   font-family: 'Roboto', sans-serif;
   font-size: 30px;
@@ -551,7 +551,7 @@ height: 35px;
     }
 
     .main__button{
-    font: 500 14px/17px Roboto, arial, helvetica, sans-serif;
+    font: 500 14px/21px Roboto, arial, helvetica, sans-serif;
     padding: 13px 23px 13px 20px;
     }
 
