--- a/style.css
+++ b/style.css
@@ -134,6 +134,12 @@ height: 35px;
      }
     }
 
+    @media (max-width: 2240px) {
+    .main {
+    padding: 80px 61% 20% 0;
+     }
+    }
+
     @media (max-width: 2016px) {
     .points {
     top: 90%;
@@ -332,8 +338,8 @@ height: 35px;
 
   .points{
    position: absolute;
-   top: 651px;
-   padding: 0px 0px 0px 1px;
+   top: 654px;
+   padding-left: 437px;
    color: #C8DBFB;
       }
    }
@@ -547,7 +553,7 @@ height: 35px;
 
    .main{
     text-align: center;
-    padding: 85% 0 200px;
+    padding: 85% 0 0;
     background-size: 93%;
     background-position: top center;
      }
@@ -573,8 +579,8 @@ height: 35px;
     }
 
     .main__button{
-    font: 500 14px/21px Roboto, arial, helvetica, sans-serif;
-    padding: 13px 23px 13px 20px;
+    font: 500 14px/15px Roboto, arial, helvetica, sans-serif;
+    padding: 15px 22px 13px 20px;
     }
 
     .points{
