--- a/style.css
+++ b/style.css
@@ -382,12 +382,12 @@ height: 35px;
     }
 
    .header {
-   margin-bottom: 28px;
+   margin-bottom: 2%;
     }
 
    .main{
     text-align: center;
-    padding: 74% 25% 9%;
+    padding: 74% 25% 7%;
     background-size: 74%;
     background-position: top center;
      }
