--- a/style.css
+++ b/style.css
@@ -182,8 +182,8 @@ height: 35px;
      .main{
      text-align: left;
      padding: 7% 0 115px;
-     background-size: 54%;
-     background-position: 423px;
+     background-size: 514px;
+     background-position: 417px;
        }
 
        .main__title{
@@ -274,8 +274,8 @@ height: 35px;
    .main{
    text-align: left;
    padding: 7% 0 115px;
-   background-size: 54%;
-   background-position: 423px;
+   background-size: 511px;
+   background-position: 419px;
      }
 
      .main__title{
