--- a/style.css
+++ b/style.css
@@ -243,11 +243,39 @@ height: 35px;
    }
   }
 
-  @media (max-width: 1328px){
+  @media (max-width: 1328px) {
     .wrapper{
     margin: auto;
     width: 90%;
      }
+
+    .points {
+    margin-left: 10%;
+    }
+  }
+
+  @media (max-width: 1240px) {
+    .points {
+    margin-left: 8%;
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .points {
+    margin-left: 7%;
+    }
+  }
+
+  @media (max-width: 1150px) {
+    .points {
+    margin-left: 6%;
+    }
+  }
+
+  @media (max-width: 1100px) {
+    .points {
+    margin-left: 0;
+    }
   }
 
   @media (max-width: 1036px){
@@ -351,10 +379,22 @@ height: 35px;
    }
   }
 
+  @media (max-width: 952px) {
+    .points {
+    padding-left: 410px;
+    }
+  }
+
+  @media (max-width: 892px) {
+    .points {
+    padding-left: 43%;
+    }
+  }
+
   @media (max-width: 804px) {
   .points{
   top: 80%;
-  padding-left: 40%
+  padding-left: 42%
    }
   }
 
