--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ height: 35px;
 }
 
 .menu__item:hover::after {
+   position: absolute;
    opacity: 0.5;
    transition: opacity .5s, width .5s;
 }
